# rusty-erp

./: .gitignore  Cargo.toml
app/: Cargo.toml  build.rs
app/frontend/: index.html
app/src/: api.rs  api_auth.rs  asset.rs  auth.rs  backup.rs  crm.rs  email.rs  export.rs  finance.rs  hr.rs  inventory.rs  main.rs  middleware.rs  procurement.rs  production.rs  tenant.rs
crates/frappe-core/: Cargo.toml
crates/frappe-core/src/: lib.rs  storage.rs
crates/frappe-derive/: Cargo.toml
crates/frappe-derive/src/: lib.rs
crates/frappe-mysql/: Cargo.toml
crates/frappe-mysql/src/: lib.rs
crates/frappe-postgres/: Cargo.toml
crates/frappe-postgres/src/: lib.rs
crates/frappe-sqlite/: Cargo.toml
crates/frappe-sqlite/src/: lib.rs
