[workspace]
members = [
    "crates/frappe-core",
    "crates/frappe-derive",
    "crates/frappe-sqlite",
    "crates/frappe-postgres",
    "crates/frappe-mysql",
    "app",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }

# Code generation
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "sqlite", "json", "chrono", "rust_decimal"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
async-trait = "0.1"
dotenvy = "0.15"
